test.output
Gramática

    0 $accept: program $end

    1 program: declarations WHILE '(' TRUE ')' '{' statements '}'

    2 declarations: declarations declaration
    3             | /* vacío */

    4 declaration: TYPE ID ';'
    5            | TYPE ID '[' NUM ']' ';'
    6            | TYPE ID
    7            | TYPE ID '[' NUM ']'

    8 statements: statements statement
    9           | /* vacío */

   10 statement: '{' statements '}'
   11          | WHILE '(' TRUE ')' '{' statements '}'
   12          | DO statement WHILE '(' expr ')' ';'
   13          | DO statement WHILE '(' expr ')'
   14          | IF '(' expr ')' '{' statements '}' ELSE '{' statements '}'
   15          | IF '(' expr ')' '{' statements '}'
   16          | ID '=' expr ';'
   17          | BREAK ';'
   18          | BREAK

   19 expr: expr '+' expr
   20     | expr '-' expr
   21     | expr '*' expr
   22     | expr '/' expr
   23     | ID
   24     | NUM
   25     | ID '[' expr ']'
   26     | '(' expr ')'


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 1 11 12 13 14 15 26
')' (41) 1 11 12 13 14 15 26
'*' (42) 21
'+' (43) 19
'-' (45) 20
'/' (47) 22
';' (59) 4 5 12 16 17
'=' (61) 16
'[' (91) 5 7 25
']' (93) 5 7 25
'{' (123) 1 10 11 14 15
'}' (125) 1 10 11 14 15
error (256)
NUM (258) 5 7 24
ID (259) 4 5 6 7 16 23 25
TYPE (260) 4 5 6 7
WHILE (261) 1 11 12 13
DO (262) 12 13
IF (263) 14 15
ELSE (264) 14
TRUE (265) 1 11
BREAK (266) 17 18


No terminales con las reglas donde aparecen

$accept (24)
    en la izquierda: 0
program (25)
    en la izquierda: 1, en la derecha: 0
declarations (26)
    en la izquierda: 2 3, en la derecha: 1 2
declaration (27)
    en la izquierda: 4 5 6 7, en la derecha: 2
statements (28)
    en la izquierda: 8 9, en la derecha: 1 8 10 11 14 15
statement (29)
    en la izquierda: 10 11 12 13 14 15 16 17 18, en la derecha: 8 12
    13
expr (30)
    en la izquierda: 19 20 21 22 23 24 25 26, en la derecha: 12 13
    14 15 16 19 20 21 22 25 26


estado 0

    0 $accept: . program $end

    $default  reduce usando la regla 3 (declarations)

    program       ir al estado 1
    declarations  ir al estado 2


estado 1

    0 $accept: program . $end

    $end  desplazar e ir al estado 3


estado 2

    1 program: declarations . WHILE '(' TRUE ')' '{' statements '}'
    2 declarations: declarations . declaration

    TYPE   desplazar e ir al estado 4
    WHILE  desplazar e ir al estado 5

    declaration  ir al estado 6


estado 3

    0 $accept: program $end .

    $default  aceptar


estado 4

    4 declaration: TYPE . ID ';'
    5            | TYPE . ID '[' NUM ']' ';'
    6            | TYPE . ID
    7            | TYPE . ID '[' NUM ']'

    ID  desplazar e ir al estado 7


estado 5

    1 program: declarations WHILE . '(' TRUE ')' '{' statements '}'

    '('  desplazar e ir al estado 8


estado 6

    2 declarations: declarations declaration .

    $default  reduce usando la regla 2 (declarations)


estado 7

    4 declaration: TYPE ID . ';'
    5            | TYPE ID . '[' NUM ']' ';'
    6            | TYPE ID .
    7            | TYPE ID . '[' NUM ']'

    ';'  desplazar e ir al estado 9
    '['  desplazar e ir al estado 10

    $default  reduce usando la regla 6 (declaration)


estado 8

    1 program: declarations WHILE '(' . TRUE ')' '{' statements '}'

    TRUE  desplazar e ir al estado 11


estado 9

    4 declaration: TYPE ID ';' .

    $default  reduce usando la regla 4 (declaration)


estado 10

    5 declaration: TYPE ID '[' . NUM ']' ';'
    7            | TYPE ID '[' . NUM ']'

    NUM  desplazar e ir al estado 12


estado 11

    1 program: declarations WHILE '(' TRUE . ')' '{' statements '}'

    ')'  desplazar e ir al estado 13


estado 12

    5 declaration: TYPE ID '[' NUM . ']' ';'
    7            | TYPE ID '[' NUM . ']'

    ']'  desplazar e ir al estado 14


estado 13

    1 program: declarations WHILE '(' TRUE ')' . '{' statements '}'

    '{'  desplazar e ir al estado 15


estado 14

    5 declaration: TYPE ID '[' NUM ']' . ';'
    7            | TYPE ID '[' NUM ']' .

    ';'  desplazar e ir al estado 16

    $default  reduce usando la regla 7 (declaration)


estado 15

    1 program: declarations WHILE '(' TRUE ')' '{' . statements '}'

    $default  reduce usando la regla 9 (statements)

    statements  ir al estado 17


estado 16

    5 declaration: TYPE ID '[' NUM ']' ';' .

    $default  reduce usando la regla 5 (declaration)


estado 17

    1 program: declarations WHILE '(' TRUE ')' '{' statements . '}'
    8 statements: statements . statement

    ID     desplazar e ir al estado 18
    WHILE  desplazar e ir al estado 19
    DO     desplazar e ir al estado 20
    IF     desplazar e ir al estado 21
    BREAK  desplazar e ir al estado 22
    '{'    desplazar e ir al estado 23
    '}'    desplazar e ir al estado 24

    statement  ir al estado 25


estado 18

   16 statement: ID . '=' expr ';'

    '='  desplazar e ir al estado 26


estado 19

   11 statement: WHILE . '(' TRUE ')' '{' statements '}'

    '('  desplazar e ir al estado 27


estado 20

   12 statement: DO . statement WHILE '(' expr ')' ';'
   13          | DO . statement WHILE '(' expr ')'

    ID     desplazar e ir al estado 18
    WHILE  desplazar e ir al estado 19
    DO     desplazar e ir al estado 20
    IF     desplazar e ir al estado 21
    BREAK  desplazar e ir al estado 22
    '{'    desplazar e ir al estado 23

    statement  ir al estado 28


estado 21

   14 statement: IF . '(' expr ')' '{' statements '}' ELSE '{' statements '}'
   15          | IF . '(' expr ')' '{' statements '}'

    '('  desplazar e ir al estado 29


estado 22

   17 statement: BREAK . ';'
   18          | BREAK .

    ';'  desplazar e ir al estado 30

    $default  reduce usando la regla 18 (statement)


estado 23

   10 statement: '{' . statements '}'

    $default  reduce usando la regla 9 (statements)

    statements  ir al estado 31


estado 24

    1 program: declarations WHILE '(' TRUE ')' '{' statements '}' .

    $default  reduce usando la regla 1 (program)


estado 25

    8 statements: statements statement .

    $default  reduce usando la regla 8 (statements)


estado 26

   16 statement: ID '=' . expr ';'

    NUM  desplazar e ir al estado 32
    ID   desplazar e ir al estado 33
    '('  desplazar e ir al estado 34

    expr  ir al estado 35


estado 27

   11 statement: WHILE '(' . TRUE ')' '{' statements '}'

    TRUE  desplazar e ir al estado 36


estado 28

   12 statement: DO statement . WHILE '(' expr ')' ';'
   13          | DO statement . WHILE '(' expr ')'

    WHILE  desplazar e ir al estado 37


estado 29

   14 statement: IF '(' . expr ')' '{' statements '}' ELSE '{' statements '}'
   15          | IF '(' . expr ')' '{' statements '}'

    NUM  desplazar e ir al estado 32
    ID   desplazar e ir al estado 33
    '('  desplazar e ir al estado 34

    expr  ir al estado 38


estado 30

   17 statement: BREAK ';' .

    $default  reduce usando la regla 17 (statement)


estado 31

    8 statements: statements . statement
   10 statement: '{' statements . '}'

    ID     desplazar e ir al estado 18
    WHILE  desplazar e ir al estado 19
    DO     desplazar e ir al estado 20
    IF     desplazar e ir al estado 21
    BREAK  desplazar e ir al estado 22
    '{'    desplazar e ir al estado 23
    '}'    desplazar e ir al estado 39

    statement  ir al estado 25


estado 32

   24 expr: NUM .

    $default  reduce usando la regla 24 (expr)


estado 33

   23 expr: ID .
   25     | ID . '[' expr ']'

    '['  desplazar e ir al estado 40

    $default  reduce usando la regla 23 (expr)


estado 34

   26 expr: '(' . expr ')'

    NUM  desplazar e ir al estado 32
    ID   desplazar e ir al estado 33
    '('  desplazar e ir al estado 34

    expr  ir al estado 41


estado 35

   16 statement: ID '=' expr . ';'
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr

    '+'  desplazar e ir al estado 42
    '-'  desplazar e ir al estado 43
    '*'  desplazar e ir al estado 44
    '/'  desplazar e ir al estado 45
    ';'  desplazar e ir al estado 46


estado 36

   11 statement: WHILE '(' TRUE . ')' '{' statements '}'

    ')'  desplazar e ir al estado 47


estado 37

   12 statement: DO statement WHILE . '(' expr ')' ';'
   13          | DO statement WHILE . '(' expr ')'

    '('  desplazar e ir al estado 48


estado 38

   14 statement: IF '(' expr . ')' '{' statements '}' ELSE '{' statements '}'
   15          | IF '(' expr . ')' '{' statements '}'
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr

    '+'  desplazar e ir al estado 42
    '-'  desplazar e ir al estado 43
    '*'  desplazar e ir al estado 44
    '/'  desplazar e ir al estado 45
    ')'  desplazar e ir al estado 49


estado 39

   10 statement: '{' statements '}' .

    $default  reduce usando la regla 10 (statement)


estado 40

   25 expr: ID '[' . expr ']'

    NUM  desplazar e ir al estado 32
    ID   desplazar e ir al estado 33
    '('  desplazar e ir al estado 34

    expr  ir al estado 50


estado 41

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   26     | '(' expr . ')'

    '+'  desplazar e ir al estado 42
    '-'  desplazar e ir al estado 43
    '*'  desplazar e ir al estado 44
    '/'  desplazar e ir al estado 45
    ')'  desplazar e ir al estado 51


estado 42

   19 expr: expr '+' . expr

    NUM  desplazar e ir al estado 32
    ID   desplazar e ir al estado 33
    '('  desplazar e ir al estado 34

    expr  ir al estado 52


estado 43

   20 expr: expr '-' . expr

    NUM  desplazar e ir al estado 32
    ID   desplazar e ir al estado 33
    '('  desplazar e ir al estado 34

    expr  ir al estado 53


estado 44

   21 expr: expr '*' . expr

    NUM  desplazar e ir al estado 32
    ID   desplazar e ir al estado 33
    '('  desplazar e ir al estado 34

    expr  ir al estado 54


estado 45

   22 expr: expr '/' . expr

    NUM  desplazar e ir al estado 32
    ID   desplazar e ir al estado 33
    '('  desplazar e ir al estado 34

    expr  ir al estado 55


estado 46

   16 statement: ID '=' expr ';' .

    $default  reduce usando la regla 16 (statement)


estado 47

   11 statement: WHILE '(' TRUE ')' . '{' statements '}'

    '{'  desplazar e ir al estado 56


estado 48

   12 statement: DO statement WHILE '(' . expr ')' ';'
   13          | DO statement WHILE '(' . expr ')'

    NUM  desplazar e ir al estado 32
    ID   desplazar e ir al estado 33
    '('  desplazar e ir al estado 34

    expr  ir al estado 57


estado 49

   14 statement: IF '(' expr ')' . '{' statements '}' ELSE '{' statements '}'
   15          | IF '(' expr ')' . '{' statements '}'

    '{'  desplazar e ir al estado 58


estado 50

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   25     | ID '[' expr . ']'

    '+'  desplazar e ir al estado 42
    '-'  desplazar e ir al estado 43
    '*'  desplazar e ir al estado 44
    '/'  desplazar e ir al estado 45
    ']'  desplazar e ir al estado 59


estado 51

   26 expr: '(' expr ')' .

    $default  reduce usando la regla 26 (expr)


estado 52

   19 expr: expr . '+' expr
   19     | expr '+' expr .
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr

    '*'  desplazar e ir al estado 44
    '/'  desplazar e ir al estado 45

    $default  reduce usando la regla 19 (expr)


estado 53

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   20     | expr '-' expr .
   21     | expr . '*' expr
   22     | expr . '/' expr

    '*'  desplazar e ir al estado 44
    '/'  desplazar e ir al estado 45

    $default  reduce usando la regla 20 (expr)


estado 54

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   21     | expr '*' expr .
   22     | expr . '/' expr

    $default  reduce usando la regla 21 (expr)


estado 55

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   22     | expr '/' expr .

    $default  reduce usando la regla 22 (expr)


estado 56

   11 statement: WHILE '(' TRUE ')' '{' . statements '}'

    $default  reduce usando la regla 9 (statements)

    statements  ir al estado 60


estado 57

   12 statement: DO statement WHILE '(' expr . ')' ';'
   13          | DO statement WHILE '(' expr . ')'
   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr

    '+'  desplazar e ir al estado 42
    '-'  desplazar e ir al estado 43
    '*'  desplazar e ir al estado 44
    '/'  desplazar e ir al estado 45
    ')'  desplazar e ir al estado 61


estado 58

   14 statement: IF '(' expr ')' '{' . statements '}' ELSE '{' statements '}'
   15          | IF '(' expr ')' '{' . statements '}'

    $default  reduce usando la regla 9 (statements)

    statements  ir al estado 62


estado 59

   25 expr: ID '[' expr ']' .

    $default  reduce usando la regla 25 (expr)


estado 60

    8 statements: statements . statement
   11 statement: WHILE '(' TRUE ')' '{' statements . '}'

    ID     desplazar e ir al estado 18
    WHILE  desplazar e ir al estado 19
    DO     desplazar e ir al estado 20
    IF     desplazar e ir al estado 21
    BREAK  desplazar e ir al estado 22
    '{'    desplazar e ir al estado 23
    '}'    desplazar e ir al estado 63

    statement  ir al estado 25


estado 61

   12 statement: DO statement WHILE '(' expr ')' . ';'
   13          | DO statement WHILE '(' expr ')' .

    ';'  desplazar e ir al estado 64

    $default  reduce usando la regla 13 (statement)


estado 62

    8 statements: statements . statement
   14 statement: IF '(' expr ')' '{' statements . '}' ELSE '{' statements '}'
   15          | IF '(' expr ')' '{' statements . '}'

    ID     desplazar e ir al estado 18
    WHILE  desplazar e ir al estado 19
    DO     desplazar e ir al estado 20
    IF     desplazar e ir al estado 21
    BREAK  desplazar e ir al estado 22
    '{'    desplazar e ir al estado 23
    '}'    desplazar e ir al estado 65

    statement  ir al estado 25


estado 63

   11 statement: WHILE '(' TRUE ')' '{' statements '}' .

    $default  reduce usando la regla 11 (statement)


estado 64

   12 statement: DO statement WHILE '(' expr ')' ';' .

    $default  reduce usando la regla 12 (statement)


estado 65

   14 statement: IF '(' expr ')' '{' statements '}' . ELSE '{' statements '}'
   15          | IF '(' expr ')' '{' statements '}' .

    ELSE  desplazar e ir al estado 66

    $default  reduce usando la regla 15 (statement)


estado 66

   14 statement: IF '(' expr ')' '{' statements '}' ELSE . '{' statements '}'

    '{'  desplazar e ir al estado 67


estado 67

   14 statement: IF '(' expr ')' '{' statements '}' ELSE '{' . statements '}'

    $default  reduce usando la regla 9 (statements)

    statements  ir al estado 68


estado 68

    8 statements: statements . statement
   14 statement: IF '(' expr ')' '{' statements '}' ELSE '{' statements . '}'

    ID     desplazar e ir al estado 18
    WHILE  desplazar e ir al estado 19
    DO     desplazar e ir al estado 20
    IF     desplazar e ir al estado 21
    BREAK  desplazar e ir al estado 22
    '{'    desplazar e ir al estado 23
    '}'    desplazar e ir al estado 69

    statement  ir al estado 25


estado 69

   14 statement: IF '(' expr ')' '{' statements '}' ELSE '{' statements '}' .

    $default  reduce usando la regla 14 (statement)
